# hr-hosted-agent

./: Dockerfile  README.ko.md  README.md  deploy.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: track-upstream.yml
enterprise/: README.ko.md  README.md  pyproject.toml
